# DAI3105

./: .gitignore  README.md  REPORT.md  pyproject.toml
models/: best_model.pth
src/metaverse_voice_recognition/: config.py  dataset.py  download_librispeech.py  download_voxceleb.py  ecapa_tdnn.py  generate_sample_dataset.py  generate_test_data.py  main.py  model.py  real_time_voice_processor.py  streaming.py  test.py  test_streaming.py  train.py
