[project]
name = "metaverse-voice-recognition"
version = "0.1.0"
description = "메타버스 내 음성 인식 및 화자 식별 시스템"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/metaverse_voice_recognition"] 